# petercat

./: .env.example  .gitignore  .prettierrc.js  .vercelignore  Dockerfile  LICENSE  Makefile  Pipfile  README.en-US.md  README.ja-JP.md  README.md  README.zh-CN.md  docker-compose.dev.yml  docker-compose.yml  middleware.ts  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_python.sh  template.yml  test.py  tsconfig.json
.aws/: awsCloudFormation.yaml  petercat-example.toml  petercat-preview.toml  petercat-prod.toml  task_definition.json  task_definition_preview.json
WhiskerRAG/: .gitignore  README.md
amplify/: cli.json  team-provider-info.json
app/: globals.css  layout.tsx  logout.tsx  page.tsx
assistant/:  README.md  README.md  package.json  tailwind.css  tsconfig.json
client/: .env.example  .env.local.example  .gitignore  .vercelignore  Makefile  amplify.yml  i18n.js  i18next-parser.config.js  instrumentation.ts  kiwi-config.json  middleware.ts  next.config.js  package-lock.json  package.json  sentry.client.config.js  sentry.server.config.js  tailwind.config.js  tsconfig.json
components/: BotCard.tsx  BotDetail.tsx  BotsList.tsx  ChatMessageBubble.tsx  ChatWindow.tsx  ImgItem.tsx  Navbar.tsx  User.tsx
doc/: deploy_local.md  init_aws.md
docker/: Dockerfile.aws.lambda  Dockerfile.subscriber  Dockerfile.vercel  docker-compose.dev.yml  docker-compose.yml
extension/: export.js  next.config.js  package.json  tsconfig.json  webpack.config.js
hooks/: useAudioGenerator.ts  useBot.ts
interface/: index.ts
lui/:  README.md  .fatherrc.ts  README.md  package.json  tailwind.config.js  tailwind.css  tsconfig.json
petercat_utils/: README.md  __init__.py  data_class.py
scripts/: envs.py  requirements.txt  sync_envs.py
server/: .env.example  .env.local.example  Dockerfile  Dockerfile.aws.lambda  Dockerfile.dev  README.md  README.zh-CN.md  app.py  data_class.py  env.py  file_exclusions.yaml  index.py  main.py  petercat-preview.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_python.sh  template.yml  test_main.py
share/: supabas-client.ts
(+617 files in other folders)
