[tool.poetry]
name = "petercat_utils"
version = "0.1.25"
description = ""
authors = ["raoha.rh <raohai.rh@antgroup.com>"]
readme = "README.md"
packages = [{include = "petercat_utils"}]

[tool.poetry.dependencies]
python = "^3.8"
langchain_community = "^0.2.11"
langchain_openai = "^0.1.20"
langchain_core = "0.2.28"
supabase = "2.6.0"
pydantic = "2.7.0"
PyGithub = "2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
